part-2-kubernetes/istio/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: titanic-api-mtls
  namespace: titanic-api
  labels:
    app: titanic-api
spec:
  selector:
    matchLabels:
      app: titanic-api
  mtls:
    mode: STRICT

---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: titanic-db-mtls
  namespace: titanic-api
  labels:
    app: titanic-api
    component: database
spec:
  selector:
    matchLabels:
      app: titanic-api
      component: database
  mtls:
    mode: STRICT
